* lower bound parameters under more stringent control during estimation and are bounded to never 
  be higher than .6

* infit and outfit stats in itemfit() now work for Rasch parital credit and rating scale models

* Rasch rating scale models can now be estimated with potential rsm.blocks (same as grsm model). 
  "Generalized" rating scale models can also be estimated, though this requires manipulating the 
  starting values directly

* added AICc and sample size adjusted BIC (SABIC) information statistics

* new mixedmirt() function for estimating IRT models with person level covariates. Currently only
  supports fixed effect predictors, but random effect predictors are being developed

* more structured output when using the anova() generic

* standard errors no longer slightly positively biased when parameter contraints are imposed 

----------------------------------------------------------------
mirt 0.4.2
----------------------------------------------------------------

* item probability functions now only permit permissible values, and models may converge even when
  the log-likelihood decreases during estimation. In the EM if the model does not have a strictly 
  increasing log-likelihood then a warning message will be printed

* infit and outfit statistics are now only applicable to Rasch models (as they should be), 
  and in itemfit/personfit() a 'method' argument has been added to specify which factor score 
  estimates should be used

* read.mirt() re-added into the package to allow for translating estimated models into a format
  usable by the plink package

* test standard error added to plot() generic using type = 'SE', and expected score plot added 
  to itemplot() using type = 'score'

* weighted likelihood estimation (WLE) factor scores now available (without standard errors)

* removed the allpars option to coef() generics and only return a named list with the (possibly 
  rotated) item and group coefficients
