@@ -82,3 +82,4 @@ Collate:
     'mixedmirt.R'
     'MHRM.mixed.R'
     'Mixed-methods.R'
+    'fitIndices.R'
