@@ -1,3 +1,4 @@
+S3method(print,mirtFitIndices)
 S3method(print,wald)
 export(bfactor)
 export(calcLogLik)
@@ -5,6 +6,7 @@ export(confmirt)
 export(confmirt.model)
 export(expand.table)
 export(extract.item)
+export(fitIndices)
 export(fscores)
 export(itemfit)
 export(iteminfo)
