@@ -1,3 +1,5 @@
+* new fitIndices() function added to compute additional model fit statistics such as M2
+
 * lower bound parameters under more stringent control during estimation and are bounded to never 
   be higher than .6
 
